--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,10 @@
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>게시판 프로젝트</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>게시판 프로젝트</title>
+  </head>
 
-    <body>
-        {{{
-            app.engine("handlebars", handlebars.engine({ layoutsDir: "views"}));
-            res.render("home", { title: "안녕하세요", message: "마ㄴ나서 반갑습니다!", layout: false});
-        }}}
-    </body>
+  <body>
+    {{{body}}}
+  </body>
 </html>
