--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -23,24 +23,42 @@
       </tr>
     </thead>
     <tbody>
+      {{#each posts}}
       <tr>
-        <td><a href="/detail/">타이틀</a></td>
-        <td align="center">작성자 이름</td>
-        <td align="center">99999</td>
-        <td align="center">2024.07.17</td>
+        <td><a href="/detail/{{_id}}">{{title}}</a></td> <!-- 상세페이지 링크-->
+        <td>{{writer}}</td>
+        <td>{{hits}}</td>
+        <td>{{dateString createDt}}</td> <!-- dateString 헬퍼 함수 사용 -->
       </tr>
+      {{/each}}
     </tbody>
   </table>
 </div>
 
 <!--페이징 영역 -->
 <div>
-  <a>&lt;&lt;</a>
+  {{#with paginator}} <!-- with 내장 헬퍼 함수 사용 -->
+<!-- @root 서버의 원본 참조 시 사용 -->
+  <a href="/?page=1&search={{@root.search}}">&lt;&lt;</a>
+  {{#if hasPrev}}
+  <a href="/?page={{prevPage}}&search={{@root.search}}">&lt;</a>
+<!-- 1페이지인 경우 이전 페이지가 없으므로 링크가 없음 -->
+  {{else}}
   <a>&lt;</a>
-  <a>1</a>
-  <a>2</a>
-  <a>3</a>
-  <a>4</a>
+  {{/if}}
+  {{#each pageList}}
+  {{#if (eq . @root.paginator.page)}} <!-- eq 내장 헬퍼 사용 -->
+  <a>{{.}}</a>
+  {{else}}
+  <a href="/?page={{.}}&search={{@root.search}}">{{.}}</a>
+  {{/if}}
+  {{/each}}
+  {{#if hasNext}}
+  <a href="/?page={{nextPage}}&search={{@root.search}}">&gt;</a>
+  <!-- 마지막 페이지인 경우 이전 페이지가 없으므로 링크 삭제 X -->
+  {{else}}
   <a>&gt;</a>
-  <a>&gt;&gt;</a>
+  {{/if}}
+  <a href="/?page={{lastPage}}&search={{@root.search}}">&gt;&gt;</a>
+  {{/with}}
 </div>
