--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -28,7 +28,7 @@
         <td><a href="/detail/{{_id}}">{{title}}</a></td> <!-- 상세페이지 링크-->
         <td>{{writer}}</td>
         <td>{{hits}}</td>
-        <td>{{dateString createDt}}</td> <!-- dateString 헬퍼 함수 사용 -->
+        <td>{{dateString createdDt}}</td> <!-- dateString 헬퍼 함수 사용 -->
       </tr>
       {{/each}}
     </tbody>
