--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -58,12 +58,11 @@
     {{#each comments}}
       <div>
         <div>
-          작성자 :
-          <b>댓글 작성자</b>
+          작성자 : <b>{{name}}</b>
         </div>
         <div>
-          작성일시 : 2024-07-17 11:26:23
-          <button onclick="deleteComment('1')">삭제</button>
+          작성일시 : {{dateString createdDt}}
+          <button onclick="deleteComment('{{idx}}')">삭제</button>
           <!-- 삭제 버튼 -->
         </div>
       </div>
@@ -80,21 +79,74 @@
   </div>
 </footer>
 <script>
-  const postOption = { method: 'POST', headers: { 'Content-Type':
-  'application/json', }, } async function modifyPost() { const password =
-  prompt("패스워드를 입력해주세요"); if (!password) { // 프롬프트에서 취소를
-  누른 경우 처리 return; } const result = await fetch("/check-password", { //
-  check-password API 실행 ...postOption, body: JSON.stringify({id: "{{post._id}}",
-  password}) }); const data = await result.json(); // json 함수를 실행하는
-  경우도 await을 해줘야 함 if (data.isExist) { // 패스워드가 맞는 경우 수정
-  페이지로 이동 document.location = "/modify/{{post._id}}" } else {
-  alert("패스워드가 올바르지 않습니다."); } } const deleteOption = { method:
-  'DELETE', headers: { 'Content-Type' : 'application/json', }, } async function
-  deletePost() { const password = prompt("삭제하려면 패스워드를 입력해주세요");
-  // 프롬프트로 값 입력받기 if (!password) { // 프롬프트에서 취소를 누른 경우
-  처리 return; } const result = await fetch("/delete", { // fetch API를 사용해
-  delete API 호출 ...deleteOption, body: JSON.stringify({ id: "{{post._id}}",
-  password }) }); const data = await result.json(); // delete API의 결과에 따라
-  다른 메시지 출력 if (!data.isSuccess) { alert("삭제에 실패했습니다. 패스워드를
-  확인해주세요."); return; } document.location = "/"; }
+  const postOption = {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json',
+    }, 
+  }
+  async function modifyPost() {
+    const password = prompt("패스워드를 입력해주세요"); // 프롬프트에서 취소 누른 경우 처리
+
+  if (!password) {
+      return;
+    }
+    
+    const result = await fetch("/check-password", { //check-password API 실행 
+        ...postOption,
+        body: JSON.stringify({id: "{{post._id}}", password}) 
+      });
+
+    const data = await result.json(); // json 함수를 실행하는경우도 await을 해줘야 함 
+    if (data.isExist) { // 패스워드가 맞는 경우 수정페이지로 이동 
+        document.location = "/modify/{{post._id}}"
+        } else {
+          alert("패스워드가 올바르지 않습니다.");
+          }
+        }
+    const deleteOption = {
+      method:'DELETE',
+      headers: {
+        'Content-Type' : 'application/json',
+        },
+      }
+    async function deletePost() {
+      const password = prompt("삭제하려면 패스워드를 입력해주세요");
+  // 프롬프트로 값 입력받기
+      if (!password) { // 프롬프트에서 취소를 누른 경우 처리 
+        return;
+        }
+    const result = await fetch("/delete", { // fetch API를 사용해 delete API 호출 
+      ...deleteOption, 
+      body: JSON.stringify({ id: "{{post._id}}", password }) 
+    });
+      
+    const data = await result.json(); // delete API의 결과에 따라 다른 메시지 출력 
+    if (!data.isSuccess) { 
+      alert("삭제에 실패했습니다. 패스워드를 확인해주세요."); 
+      return; 
+    } 
+    
+    document.location = "/"; }
+
+    async function deleteComment(idx) {
+      const password = prompt("삭제하려면 패스워드를 입력해주세요");
+
+      if (!password) { //프롬프트에서 취소를 누른 경우 처리
+        return;
+      }
+
+      const result = await fetch("/delete-comment", {
+        ...deleteOption,
+        body: JSON.stringify({ id: "{{post._id}}", idx, password })
+      });
+
+      const data = await result.json(); // 댓글 삭제 실패 시 메시지 띄우고 함수 실행 종료
+      if (!data.isSuccess) {
+        alert("삭제에 실패했습니다. 패스워드를 확인해주세요.");
+        return;
+      }
+
+      alert("삭제 성공"); // 성공 시 메시지를 띄우고 화면 리프레시
+      document.location.reload();
+    }
 </script>
